*Empty MediaWiki Message*

--- a/Цыганкин,_Дмитрий_Васильевич.mw
+++ b/Цыганкин,_Дмитрий_Васильевич.mw
@@ -23,21 +23,26 @@
  |вальма                = http://www.cigankin.ru/
  |википурнавкс         = 
 }}
-'''Цыганкин Дмитрий Васильевич''' ([[1925 ие|1925 иень]] [[ожоковонь 22 чи]] [[Мокшалей (Чаунзабуе)|Мокшалей веле]]) — эрзянь ине кельсодый, профессор.
+'''Цыганкин Дмитрий Васильевич''' ([[1925 ие|1925 иень]] [[ожоковонь 22 чи]] [[Мокшалей (Чаунзабуе)|Мокшалей веле]]<ref name="МРОКМ им. И.Д. Воронина_С юбилеем!">[http://www.mrkm.ru/news/?id=161  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». С юбилеем!] {{ref-ru}}</ref>) — эрзянь<ref name="МГУ им. Огарёва_ЦЫГАНКИН"/> ине кельсодый. Филологиянь наукань кандидат (1958), филологиянь наукань доктор<ref name="BezFormata.Ru_К юбилею">[http://saransk.bezformata.ru/listnews/tcigankina-otkrilas-vistavka-v-tcentralnom/39150250/ BezFormata.Ru. К юбилею профессора Д.В.Цыганкина открылась выставка в Центральном государственном архиве РМ] {{ref-ru}}</ref> (1978). Доцент (1961), профессор<ref name="МРОКМ им. И.Д. Воронина_С юбилеем!"/> (1979). Огаревонь казень Лауреат (1980). МАССР-нь (1985) ды РФ (1987) заслуженной наукань-теий. Кавксть максозь (руз. «Лауреат Государственной премии Республики Мордовия в области науки и техники») лем (2000, 2005), РМ-нь Прявтонь Казенть лауреат (2005).
+
+
 == Эрямо пингезэ ==
 Чачсь Д.В. Цыганкин [[1925 ие|1925 иень]] ожоковонь 22 чистэ Саранонь уездэнь Пензань губерниянь Мокшалеень волостень Мокшалей велесэ (ней – [[Мордовия Республикась|Мордовия Республикань]] [[Чаунзабуе]]. 1940 иестэ прядынзе Мокшалеень аволь пешксе школань сисем класснэнь ды тусь тонавтнеме Покш Маризьвелень средней школас.
 
-1943 иень [[эйзюрков]]сто Д.В. Цыганкин эсь мелензэ коряс туи фронтов ды тееви вишка командиртнэнь артиллериянь инструментальной разведкань курсантокс (Ногинск ош,Бронницы ош).
+1943 иень [[эйзюрков]]сто Д.В. Цыганкин эсь мелензэ коряс туи фронтов ды тееви вишка командиртнэнь артиллериянь инструментальной разведкань курсантокс (Ногинск ош, Бронницы ош).
 
-1943 иень [[сундерьков]]сто кучозель Чивалгомань фронтонь 9-цей разведкань полкс.  1944 иень даволковсто – 3-це Белоруссонь фронтов. Ульнесь Орша, Минск, Борисов, Витебск оштнэнь ятонть эйстэ идемстэ. Войнань прядовоманть вастызе Кёнигсберг ало (ней – Калининград ош. Казязь «За отвагу», «За победу над Германией в Великой Отечественной войне 1941-1945 гг.», «За взятие Кёнигсберга» медальтнесэ.
+1943 иень [[сундерьков]]сто кучозель Чивалгомань фронтонь 9-цей разведкань полкс.  1944 иень даволковсто – 3-це Белоруссонь фронтов. Ульнесь Орша, Минск, Борисов, Витебск оштнэнь ятонть эйстэ идемстэ. Войнань прядовоманть вастызе Кёнигсберг ало (ней – Калининград ош). Казязь «За отвагу», «За победу над Германией в Великой Отечественной войне 1941-1945 гг.», «За взятие Кёнигсберга» медальтнесэ<ref name="Республиканская архивная служба РМ_Цыганкин">[http://www.sudbasoldata.ru/6399/ Республиканская архивная служба Республики Мордовия. Цыганкин Дмитрий Васильевич] {{ref-ru}}</ref>.
+
 1946 иень [[якшамков]]сто саезь 1948 иень [[чадыков]]с Д.В. Цыганкин служась Белоруссонь военнонь округонь № 62204 ушмонь частьсэ Поставы ош), а 1948 иень чадыковсто сезь 1950 иень [[аштемков]]с –  № 16447 ушмонь частьсэ (Галле ош, [[Германия Мастор|Германия]]).
 
-1950 иень [[аштемков]]сто Д.В. Цыганкин туи Советэнь Армиясто ды карми тонавтнеме А.И. Полежаевень лемсэ Мордовиянь педагогикань институтонь историко-филологиянь факультетс. Тонавтнема пингстэ ламо важоди философиянь ды [[Эрзянь кель|эрзянь келень]] коряс факультетэнь кужотнесэ.
+1950 иень [[аштемков]]сто Д.В. Цыганкин туи Советэнь Армиясто ды карми тонавтнеме А.И. Полежаевень лемсэ Мордовиянь педагогикань институтонь историко-филологиянь факультетс<ref name="МГУ им. Огарёва_ЦЫГАНКИН">[http://www.mrsu.ru/ru/men/detail.php?ID=7014  Мордовский государственный университет имени Н. П. Огарёва. ЦЫГАНКИН ДМИТРИЙ ВАСИЛЬЕВИЧ] {{ref-ru}}</ref>. Тонавтнема пингстэ ламо важоди философиянь ды [[Эрзянь кель|эрзянь келень]] коряс факультетэнь кужотнесэ.
 
 Мордовиянь пединститутонь прядомадо мейле Д.В. Цыганкиннэнь максозь «Рузонь келень ды литературань, эрзянь келень ды литературань тонавтыця».
 
+1972 иестэ саезь ды неень шкас Д.В. Цыганкин ловны «История эрзянского языка», «Диалектология эрзянского языка» лекционной курсат,  «Ономастика», «Сравнительная морфология финно-угорских языков» спецкурсат НИ МГУ Н.П. Огарева лемсэ филологиянь факультетсэ, вети студентэнь дипломонь ды курсовой важодемат<ref name="ИМ_Жизнь посвятил родному языку">[http://izvmor.ru/article_10114.html Известия Мордовии. Жизнь посвятил родному языку] {{ref-ru}}</ref>. 
 
-==Библиографиясь==
+
+==Шкинемазо==
 ===Научнойть ды тонавтнемань-методической важодемат===
 
 #Шугуровский диалект эрзя-мордовского языка: Дис. …канд. филол. наук. – М., 1958. – 200 с. (рукопись).
@@ -310,6 +315,9 @@
 
 == Невтькет ==
 * [http://www.cigankin.ru/ Эсьлемпелень вальмась]
+
+== Лисьм.: ==
+<references />
 
 [[Category:Эрзянь кель|Ц]]
 [[Category:Эрзянь Ине ломанть|Ц]]
