*Empty MediaWiki Message*

--- a/Гагинэнь_буе.mw
+++ b/Гагинэнь_буе.mw
@@ -51,6 +51,10 @@
 * [[Каканьбиё (Гагинэнь буе)|Каканьбиё]] — ({{lang-ru|Какино}})  
 * [[Уды веле (Гагинэнь буе)|Уды веле]] — ({{lang-ru|Большая Уда}})
 
+== Содавикс ломанть тестэнть ==
+* [[Козиков, Андрей Яковлевич|Андрей Яковлевич Козиков]]<ref name="МРОКМ им. И.Д. Воронина_А.Я. Козиков">[http://www.mrkm.ru/news/?id=155  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». А.Я. Козиков] {{ref-ru}}</ref> (чачсь [[Каканьбиё (Гагинэнь буе)|Каканьбиё]]со)— партийной важодиця,  СНК Мордовиянь АССР-нь прявт. Ульнесь ледезь 1937 иестэ.
+
+
 == Модамасторонь юрттнэ ==
 
 == Модамасторонь лезксчить ==
@@ -68,7 +72,7 @@
 == Икелень эрямо кевкстемась ==
 
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
