*Empty MediaWiki Message*

--- a/Беззубова,_Фёкла_Игнатьевна.mw
+++ b/Беззубова,_Фёкла_Игнатьевна.mw
@@ -26,7 +26,7 @@
 
 Чачсь [[1880]]-це иень [[таштамковонь 26 чи]] чистэ [[Од Мурза (Кочкурбуе)|Од Мурзасо]]<ref name="Время и события, 2010"/> ([[Кочкурбуе]]сэ). Лемдизь церьковань койсэ Фёклакс. Ансяк [[эрзят]]не а вечксызь ''ф'' гайтенть, а стяко сонзэ эйсэ ушодовиця валткак кельсэнек, ловт, арасть. Тейтернентень кармасть мереме эрзякс: ''Сёка''. Кияк сестэ, чарькодеви, эзь сода: сон минек сы шкань морыцянок, мазычинь невтицянок.
 
-Кассь тейтересь, максызь мирденень, тусть эйкакшт. Эрямось мольсь а шождасто. Стакачитнеде истякак байтяк ульнесть, текень пес ушодовсь [[1914]]-це иень войнась, мирденть саизь. Мейле революциясь, гражданской войнась. Ансяк неть коволтнэнь энгамомадо мейле, зярдо аламодо сэтьме чудильмас совась эрямось, редязель Сёкань покштояк покш ёрокчизэ: сон содась ламо [[моро]]т, [[ёвтамо|ёвтамот]], одирьвань урнемат-аварькшнемат, мазыйстэ морыль, вадрясто лайшиль, сонськак маштыль моронь ладсеме. Тень пингстэ тунь а содыль сёрмас. Эрзянь сёрмадыцятнень прявтост А.Я. Дорогойченко явсь покш мель ёроков авантень: аравтовтсь мельганзо сёрмадыцят. [[1939]] иестэ нолдазель моронь васенце пусминесь, конань лангсо аштесь лем: '''''Ф.И. Беззубова'''''. Се шкастонть саезь Сёка патясь свалшкас совась эрзянь раськенть эрямозонзо. Ризнэзь-мелявтозь пачтясь сон од пингедензэ:<br />{{Цитатань ушодома}}''Од пингем ютась, прок чаво варма,<br />
+Кассь тейтересь, максызь мирденень, тусть эйкакшт. Эрямось мольсь а шождасто. Стакачитнеде истякак байтяк ульнесть, текень пес ушодовсь [[1914]]-це иень войнась, мирденть саизь. Мейле революциясь, гражданской войнась. Ансяк неть коволтнэнь энгамомадо мейле, зярдо аламодо сэтьме чудильмас совась эрямось, редязель Сёкань покштояк покш ёрокчизэ: сон содась ламо [[моро]]т, [[ёвтамо|ёвтамот]], одирьвань урнемат-аварькшнемат, мазыйстэ морыль, вадрясто лайшиль, сонськак маштыль моронь ладсеме. Тень пингстэ тунь а содыль сёрмас. Эрзянь сёрмадыцятнень прявтост А.Я. Дорогойченко явсь покш мель ёроков авантень: аравтовтсь мельганзо сёрмадыцят. [[1936]]<ref name="МРОКМ им. И.Д. Воронина_Памяти сказительницы"/> иестэ нолдазель моронь васенце пусминесь, конань лангсо аштесь лем: '''''Ф.И. Беззубова'''''. Се шкастонть саезь Сёка патясь свалшкас совась эрзянь раськенть эрямозонзо. Ризнэзь-мелявтозь пачтясь сон од пингедензэ:<br />{{Цитатань ушодома}}''Од пингем ютась, прок чаво варма,<br />
 ''Од вийнем солась, прок тундонь ловне.<br />
 ''Тень кис сыречизэ ульнесь пек седе уцяскав''.{{Цитатань пе}}<br /> <br />
 
@@ -54,7 +54,7 @@ XX пингенть 50-це иетнестэ, сыречинзэ лангс ап
 
 Беззубова казезель кавто орденсэ, медальсэ. 1940 иень умарьковонь 25 чистэ Беззубованьне ульнесь максозь Мордовской АССР-нь раськень морыцянь лем<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref>.
 
-Кулось Сёка патясь [[1966]] иень [[панжиковонь 12 чи|панжиковонь 12]]-це чистэ. Сонзэ лем ало лиссть 10 книгат эрзянь ды рузонь кельсэ, сондензэ сёрмадозь ламо статьят, косо  ванкшновить весе ладсевксэнзэ. Неть книгатне-кирьяпусмотьне улить ловномакудосова-библиотекасо.
+Кулось Сёка патясь [[1966]] иень [[панжиковонь 12 чи|панжиковонь 12]]-це чистэ. Сонзэ лем ало лиссть 10 книгат эрзянь ды рузонь кельсэ, весемекс 80<ref name="МРОКМ им. И.Д. Воронина_Памяти сказительницы">[http://www.mrkm.ru/news/?id=149 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Памяти сказительницы] {{ref-ru}}</ref> хормань ёвкст, сондензэ сёрмадозь ламо статьят, косо  ванкшновить весе ладсевксэнзэ. Неть книгатне-кирьяпусмотьне улить ловномакудосова-библиотекасо.
 
 
 ==Лисьм. ==
