*Empty MediaWiki Message*

--- a/Беззубова,_Фёкла_Игнатьевна.mw
+++ b/Беззубова,_Фёкла_Игнатьевна.mw
@@ -51,8 +51,7 @@ XX пингенть 50-це иетнестэ, сыречинзэ лангс ап
 '''(Эрзянь Фольклор, стр. 342.)'''
 {{Цитатань пе}}
 
-
-Беззубова казезель кавто орденсэ, медальсэ. 1940 иень умарьковонь 25 чистэ Беззубованьне ульнесь максозь Мордовской АССР-нь раськень морыцянь лем<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref>.
+Ойнадо мейле ульнесть нолдазь кавто Ф.И. Беззубовань пурнавксонзо<ref name="МРОКМ им. И.Д. Воронина_Памяти сказительницы"/>: «Одкстомтозь мастор» ({{lang-ru|«Обыкновенная земля»}}, 1947), ды « Од пиньгень морот» ({{lang-ru|«Песни нового времени»}}). Беззубова казезель кавто орденсэ, медальсэ. 1940 иень умарьковонь 25 чистэ Беззубованьне ульнесь максозь Мордовской АССР-нь раськень морыцянь лем<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref>.
 
 Кулось Сёка патясь [[1966]] иень [[панжиковонь 12 чи|панжиковонь 12]]-це чистэ. Сонзэ лем ало лиссть 10 книгат эрзянь ды рузонь кельсэ, весемекс 80<ref name="МРОКМ им. И.Д. Воронина_Памяти сказительницы">[http://www.mrkm.ru/news/?id=149 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Памяти сказительницы] {{ref-ru}}</ref> хормань ёвкст, сондензэ сёрмадозь ламо статьят, косо  ванкшновить весе ладсевксэнзэ. Неть книгатне-кирьяпусмотьне улить ловномакудосова-библиотекасо.
 
