--- a/Ташто_Мурза_(Кочкурбуе).mw
+++ b/Ташто_Мурза_(Кочкурбуе).mw
@@ -72,10 +72,11 @@
 * Н.Ф. Кабанов — шождаатлет 
 * В.В. Нестеров — МАССР-нь рационализатор
 * В.Д. Объедкин — келень-содый 
-* [[Полежайкин, Сергей Иванович|Сергей Полежайкин]]<ref name="МОУ «Кочкуровская СООЩ»_ Полежайкин Сергей Иванович">[http://kochscool.edurm.ru/p92aa1.html МОУ «Кочкуровская средняя общеобразовательная школа».  Полежайкин Сергей Иванович]{{Ref-ru}}</ref> — [[Советэнь Союзонь Мараля]] (1945 ие) ({{Lang-ru|Герой Советского Союза}})
+* [[Полежайкин, Сергей Иванович|Сергей Полежайкин]]<ref name="МОУ «Кочкуровская СООЩ»_ Полежайкин Сергей Иванович">[http://kochscool.edurm.ru/p92aa1.html МОУ «Кочкуровская средняя общеобразовательная школа».  Полежайкин Сергей Иванович]{{Ref-ru}}</ref> — [[Советэнь Союзонь Мараля]] (1945 ие) ({{Lang-ru|Герой Советского Союза}}). [[Эрзя]]<ref name="МРОКМ им. И.Д. Воронина_Герой Советского Союза">[http://www.mrkm.ru/news/?id=144  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Герой Советского Союза] {{ref-ru}}</ref>.
 * Г. С. Старкин — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
 * Л.П. Сенотов — тонавтыця 
-* [[Сибиряк-Поздяев, Илларион Сергеевич|Илларион Сибиряк]]<ref name="МРОКМ им. И.Д. Воронина_Илларион Сергеевич Сибиряк-Поздяев">[http://www.mrkm.ru/news/?id=408  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Илларион Сергеевич Сибиряк-Поздяев (26.10. 1902 – 21.01.1984)] {{ref-ru}}</ref> — советэнь-партиянь важодиця, ученой-историк, фольклороньпурныця 
+* [[Сибиряк-Поздяев, Илларион Сергеевич|Илларион Сибиряк]]<ref name="МРОКМ им. И.Д. Воронина_Илларион Сергеевич Сибиряк-Поздяев">[http://www.mrkm.ru/news/?id=408  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Илларион Сергеевич Сибиряк-Поздяев (26.10. 1902 – 21.01.1984)] {{ref-ru}}</ref> — советэнь-партиянь важодиця, ученой-историк, фольклороньпурныця
+
 == Лисьм.: ==
 <references />
 
