--- a/Полежайкин,_Сергей_Иванович.mw
+++ b/Полежайкин,_Сергей_Иванович.mw
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Полежайкин Сергей Иванович''' ([[1920 ие]]стэ [[таштамковонь 14 чи]] [[Ташто Мурза (Кочкурбуе)|Ташто Мурза велесэ]] —  [[1944 ие]] [[ожоковонь 10 чи]]стэ [[Кретинг ош]]) — покш лейтенант Важодиця-Сокиця-Видиця Армиянть, Ине Ойнань улиця, Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}}) (1945 ие).
+'''Полежайкин Сергей Иванович''' ([[1920 ие]]стэ [[таштамковонь 14 чи]] [[Ташто Мурза (Кочкурбуе)|Ташто Мурза велесэ]] —  [[1944 ие]] [[ожоковонь 10 чи]]стэ [[Кретинг ош]]) — покш лейтенант Важодиця-Сокиця-Видиця Армиянть, Ине Ойнань улиця, Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}}) (1945 ие). [[Эрзя]]<ref name="МРОКМ им. И.Д. Воронина_Герой Советского Союза">[http://www.mrkm.ru/news/?id=144  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Герой Советского Союза] {{ref-ru}}</ref>.
 
 Чачсь Сергей Полежайкин  [[1920 ие]]стэ [[таштамковонь 14 чи]] [[Ташто Мурза (Кочкурбуе)|Ташто Мурза велесэ]]<ref name="МОУ «Кочкуровская СООЩ»_ Полежайкин Сергей Иванович">[http://kochscool.edurm.ru/p92aa1.html МОУ «Кочкуровская средняя общеобразовательная школа».  Полежайкин Сергей Иванович]{{Ref-ru}}</ref> сокицянь-видицянь семиясо. Прядсь сисем класст ды тусь эрямо  ды важодеме Андижанонь ёнксов Узбекень ССР-сэ. Якстере Армиясо [[1940 ие]]стэ.  1943 иестэ прядызе Рязанень ушмонь-автонь тонавтнемасо ({{lang-ru|Рязанское военно-автомобильное училище}}). Панжиковсто — Ине Отечественной ойнасо улиця.
 
@@ -32,8 +32,11 @@
 
 Советэнь Союзонь Мараля лемесь максозель тензэ [[1945 ие]]нь [[эйзюрковонь 24 чи]]стэ<ref name="Герои Страны"/>. 
 
+Полежайкинэнь лемсэ ули куро [[Клайпеда ош]]со, [[Кочкур веле (Кочкурбуе)|Кочкур велесэ]] путозь-стявтозь кеврунго, ды сонзэ лемесь тешкстазь Рязанень ушмонь-автонь тонавтнемасо<ref name="МРОКМ им. И.Д. Воронина_Герой Советского Союза"/>. 
+
 == Сёрм.: ==
 * Герои Советского Союза: Краткий биографический словарь / Пред. ред. коллегии И. Н. Шкадов. — М.: Воениздат, 1988. — Т. 2 /Любов — Ящук/. — 863 с. — 100 000 экз. — ISBN 5-203-00536-2
+
 == Лисьм.: ==
 <references />
 
