--- a/Од_Тягловка_(Кочкурбуе).mw
+++ b/Од_Тягловка_(Кочкурбуе).mw
@@ -73,8 +73,9 @@
 
 == Содавикс ломанть те велестэнть ==
 Од Тягловкасо чачсть:
-* [[Брыжинский, Василий Сергеевич|Василий Брыжинский]]<ref>[http://www.lib.e-mordovia.ru/Library/?Char=%C1&id=7 Мордовская литература: Брыжинский Василий Сергеевич]{{Ref-ru}}</ref> — театраньветиця, режиссёр, профессор
-* [[Брыжинский, Андрей Иванович|Андрей Брыжинский]]<ref>[http://www.lib.e-mordovia.ru/Library/?Char=&id=15 Мордовская литература: Брыжинский Андрей Иванович]{{Ref-ru}}</ref>  — сёрмадей, наукасо важодиця
+* [[Брыжинский, Василий Сергеевич|Василий Сергеевич Брыжинский]]<ref>[http://www.lib.e-mordovia.ru/Library/?Char=%C1&id=7 Мордовская литература: Брыжинский Василий Сергеевич]{{Ref-ru}}</ref> — театраньветиця, режиссёр, профессор
+* [[Брыжинский, Андрей Иванович|Андрей Иванович Брыжинский]]<ref>[http://www.lib.e-mordovia.ru/Library/?Char=&id=15 Мордовская литература: Брыжинский Андрей Иванович]{{Ref-ru}}</ref>  — сёрмадей, наукасо важодиця
+* [[Брыжинский, Иван Сергеевич|Иван Сергеевич Брыжинский]]<ref name="МРОКМ им. И.Д. Воронина_Иван Сергеевич Брыжинский">[http://www.mrkm.ru/news/?id=139  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Иван Сергеевич Брыжинский] {{ref-ru}}</ref> — эрзянь<ref name="МРОКМ им. И.Д. Воронина_Иван Сергеевич Брыжинский"/> сёрмадей
 
 ==Веленть эрямозо==
 
