*Empty MediaWiki Message*

--- a/Брыжинский,_Василий_Сергеевич.mw
+++ b/Брыжинский,_Василий_Сергеевич.mw
@@ -38,7 +38,7 @@
 1984 — 2002 иетнестэ — Мордовской государственной университетэнь тонавтыця, доцент, профессор, раськень культурань факультетэнь декан, [[«Масторава» (вейсендявкс)|«Масторава» вейсендявксонь]] член. 
   
 ==Ванмот==
-* [http://www.lib.e-mordovia.ru/Library/data/BrizhinskiyVasiliySergeevich/001.pdf Мордовские народные игры : эрзянские и мокшанские нар. игры и хороводы в автор. изложении и сценар. разработке на эрзян. и рус. яз. (ловнома, pdf)]{{ref-myv}}, {{ref-ru}}.
+* Мордовские народные игры : эрзянские и мокшанские нар. игры и хороводы в автор. изложении и сценар. разработке на эрзян. и рус. яз. {{ref-myv}}, {{ref-ru}}.
 * Народный театр Мордвы / В.С. Брыжинский. - Саранск : Мордов. кн. изд-во, 1985. - 168 с. 
 
 
