*Empty MediaWiki Message*

--- a/Брыжинский_(смустьтне).mw
+++ b/Брыжинский_(смустьтне).mw
@@ -1,8 +1,9 @@
 '''Брыжинский''':
 ;Буелемть
-* [[Брыжинский, Андрей Иванович|Андрей Брыжинский]] — сёрмадей, наукасо важодиця.
-* [[Брыжинский, Василий Сергеевич|Василий Брыжинский]] — неень шкань эрзянь театраньветиця, режиссёр, тонавтыця, искусствоведениянь кандидат, профессор.
-* [[Брыжинский, Михаил Иванович|Михаил Брыжинский]] —  неень шкань эрзянь сёрмадей, тонавтыця.
+* [[Брыжинский, Андрей Иванович|Андрей Иванович Брыжинский]] — сёрмадей, наукасо важодиця.
+* [[Брыжинский, Василий Сергеевич|Василий Сергеевич Брыжинский]] — неень шкань эрзянь театраньветиця, режиссёр, тонавтыця, искусствоведениянь кандидат, профессор.
+* [[Брыжинский, Михаил Иванович|Михаил Иванович Брыжинский]] —  неень шкань эрзянь сёрмадей, тонавтыця.
+* [[Брыжинский, Иван Сергеевич|Иван Сергеевич Брыжинский]] — эрзянь сёрмадей
 
 __DISAMBIG__
 
