*Empty MediaWiki Message*

--- a/Эрзянь_кулялопань_ды_журналонь_лув.mw
+++ b/Эрзянь_кулялопань_ды_журналонь_лув.mw
@@ -39,7 +39,7 @@
 * [[«Тонадодо сёрмас» (кулялопа)|«Тонадодо сёрмас»]]  Ве чинь газет. Нолдыцязо РСФСР-энь Главполитпросветэнь Всероссийской Чрезвычайной Комиссии по ликвидации неграмотности ды РСФСР-энь Наркомпросонь Центросовнацмен. 
 * [[«Тундонь видима лангось» (кулялопа)|«Тундонь видима лангось»]]<ref name="ЛГ"/> (1930)
 * [[«Ульть анок» (кулялопа)|«Ульть анок»]] (Саран ош) (1931) Эрзя-мокшонь областьсэ. Выездная редакция газеты «Будь готов». Орган крайкома ВЛКСМ и край ОНО.
-* [[«Чинь стямо» (кулялопа)|«Чинь стямо»]]<ref name="ЛГ"/> ([[Ульянонь ош|Симбирск]]) (1920) Орган подотдела национальностей оргпропаганды Симгубкома РКП.
+* [[«Чинь стямо» (кулялопа)|«Чинь стямо»]]<ref name="ЛГ"/><ref name="МРОКМ им. И.Д. Воронина_ДАТЫ">[http://www.mrkm.ru/news/?id=132  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». ДАТЫ] {{ref-ru}}</ref> ([[Ульянонь ош|Симбирск]]) (1920 медьковонь 15 чистэ) Орган подотдела национальностей оргпропаганды Симгубкома РКП.
 * Фото-газета. Лиси ковозонзо весть «Якстере тештень» марто-питневтеме. (1928).
 * [[«Эрзянь вечинь газета» (кулялопа)|«Эрзянь вечинь газета»]]<ref name="ЛГ"/> ([[Москов ош]]). (1926) Нолдыцязо ВЧКЛБ ды Совнацменэнь мокша-эрзянь отделэсь.
 * [[«Эрзянь трудицянь центрань газет» (кулялопа)|«Эрзянь трудицянь центрань газет»]]<ref name="ЛГ"/> ([[Москов ош]]) (1923 — 1931)
@@ -56,7 +56,7 @@
 
 == Ван. истяжо ==
 [[:ru:Средства_массовой_информации_России#Печатные СМИ по языкам]]
-== Сёрм. ==
+== Лисьм. ==
 <references />
 
 
