*Empty MediaWiki Message*

--- a/Кириллов,_Пётр_Семёнович.mw
+++ b/Кириллов,_Пётр_Семёнович.mw
@@ -22,11 +22,17 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Пётр Семёнович Кириллов''' ({{Lang-myv|Пётр Эрьке}}, [[1910]] [[аштемковонь 26 чи]]  Вишка Толкан веле  — [[1955]] [[сундерьковонь 24 чи]] [[Москов]]) — [[XX пинге]]нь эрзянь сёрмадей, ютавтыця.
+'''Пётр Семёнович Кириллов''', истяжо сёрмадыль {{Lang-myv|'''Пётр Эрьке, Пшти Пеель, Уро,'''}} лемтнень ало<ref name="Библиотека_Кириллов Петр">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=7 Библиотека Мордовской литературы. Кириллов Петр Семенович] {{ref-ru}}</ref> ([[1910]] [[медьковонь 8 чи]]  Вишка Толкан веле  — [[1955]] [[сундерьковонь 24 чи]] [[Москов]]) — [[XX пинге]]нь эрзянь сёрмадей, ютавтыця.
 
-Чачсь 1910-це иень медьковонь 8-це чистэ [[Похвистневань буе Самарань ёнксcо|Похвистневань буесэ]] Вишка Толкан велес [[Самара ёнкс]]со сокиця-видиця семиясо. Тесэ прядызе школанть ды педагогической техникумонть. 
+Чачсь [[1910 ие]]нь [[медьковонь 8 чи]]стэ [[Похвистневань буе Самарань ёнксcо|Похвистневань буесэ]] Вишка Толкан велесэ<ref name="МРОКМ им. И.Д. Воронина_ПО СОВЕТУ М. ГОРЬКОГО">[http://www.mrkm.ru/news/?id=129  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». ПО СОВЕТУ М. ГОРЬКОГО] {{ref-ru}}</ref> [[Самара ёнкс]]со сокиця-видиця семиясо. 
 
-Пётр Кириллов ульнесь советской сёрмадеень васенце Весисоюзонь съездсэнть-пуромкссонть. 
+Петра кармась тонавтнеме сисем иестэ. Школав молемадо икеле сон вадрясто ловнось [[Пушкин, Александр Сергеевич|Пушкинэнь]], Никитинэнь, Кольцовонь, Гоголень. Тонавтнесь [[рузонь кель]]сэ. Кода ледстнесь сонсь Пётр Семёнович<ref name="МРОКМ им. И.Д. Воронина_ПО СОВЕТУ М. ГОРЬКОГО"/>:
+{{Цитатань ушодома}} ({{Lang-myv| ''«…Монь авань ульнесь покш мелезэ,  кадык тонавтневлинь раськень тонавтыцякс. Седе покшто сон эзь сае эсь мельс. Мон сонзэ колияк эзия нее седе кенярдозекс кода [[1920 ие]]нь [[якшамков]]сто, кода минек тирень велесэнек ульнесь панжозь Мордовиянь тонавтыцянь техникум…»''}}
+{{oq|ru|«…Мать моя хотела, чтобы я выучился на народного учителя. О большем она не смела и мечтать. И я никогда не видел ее счастливой, как в январе 1920 года, когда в нашем родном селе был открыт первый Мордовский педагогический техникум…»}}
+{{Цитатань пе}}
+Тесэ прядызе школанть ды  тонавтыцянь техникумонть. 
+
+Пётр Кириллов ульнесь советэнь сёрмадеень васенце Весисоюзонь съездсэнть-пуромкссонть. 
 Сеть читнестэ примазельгак {{Масторкоцт|СССР}}-нь Сёрмадеень союзонь членкс.
 == Шкинеманзо ==
 * '''«Литова»''' драманть ульнесь покш сценической эрямозо. Сон путневсь [[1939 ие|1939]], [[1943 ие|1943]], [[1959 ие|1959]] иетнестэ. Драмасонть тевесь моли неень Мордовиянь территория лангсо 1671 - 1673 иетнестэ, невтевить событиятне, конат сюлмавозь Степан Разинэнь лементь марто. 
@@ -36,7 +42,8 @@
 
 == Сёрм.: ==
 * Писатели Мордовии [[2001]]
-
+== Лисьм.: ==
+<references />
 [[Category:Эрзянь Ине ломанть|К]]
 [[Category:Эрзянь сёрмадейть|К]]
 [[Category:Эрзянь ютавтыцят|К]]
