--- a/Сирс_Сендру_(Якстерекуро_буе).mw
+++ b/Сирс_Сендру_(Якстерекуро_буе).mw
@@ -71,7 +71,7 @@
 Лемесь-гидроним, саеви мокшонь '''''Сивинь''''' + '''трва''' {{Lang-ru|«берег»}}  валтнестэ<ref name="Память, запечатленная в слове"/>.
 
 == Содавикс ломанть те велестэнть ==
-* Ф. И. Петербургский<ref>[http://st-sindrovo.ru/history/k-125-letiyu-peterburgskogo-fedora-ivanovicha.php К 125-летию со дня рождения Петербургского Федора Ивановича] {{ref-ru}}</ref>— келеньсодый
+* Ф. И. Петербургский<ref>[http://st-sindrovo.ru/history/k-125-letiyu-peterburgskogo-fedora-ivanovicha.php К 125-летию со дня рождения Петербургского Федора Ивановича] {{ref-ru}}</ref>— мокшонь<ref name="МРОКМ им. И.Д. Воронина_Даты">[http://www.mrkm.ru/news/?id=90  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Даты] {{ref-ru}}</ref> келеньсодый
 * [[Петербургский, Иван Митрофанович|Иван Петербургский]]<ref name="МРОКМ им. И.Д. Воронина_Археолог»">[http://www.mrkm.ru/news/?id=390  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». «Археолог» к 75 – летию Ивана Митрофановича Петербургского.] {{ref-ru}}</ref>  — археолог, историк
 * В. И. Матяев<ref name="История"/> — учёной-зоотехник
 * [[Чигодайкин, Иван Васильевич|Иван Чигодайкин]]<ref name="История">[http://st-sindrovo.ru/history/selo-posle-oktyabrskoy-revolyucii.php Село Старое Синдрово после октябрьской революции] {{ref-ru}}</ref><ref name="Библиотека_Чигодайкин">[http://www.lib.e-mordovia.ru/Library/?Char=%D7&id=3 Библиотека Мордовской литературы. Чигодайкин Иван Васильевич] {{ref-ru}}</ref>— валморозей
