*Empty MediaWiki Message*

--- a/Равкина,_Полина_Ивановна.mw
+++ b/Равкина,_Полина_Ивановна.mw
@@ -24,15 +24,15 @@
 }}
 '''Прасковья (Полина) Ивановна Равкина''' ([[1923 ие]]нь [[чадыковонь 12 чи]]стэ [[Ботужвеле (Отяжбуень)|Ботужвеле]]) — [[Эрзят|эрзянь]] ава, Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}). 
 
-Чачсь [[1925 ие]]нь [[чадыковонь 12 чи]]стэ [[Ботужвеле (Отяжбуень)|Ботужвелесэ]]. Прядызеть сисемь классонь школанть тиринь велесэ, тусь важодеме «13 лет Октября» колхозов. 
+Чачсь [[1925 ие]]нь [[чадыковонь 12 чи]]стэ [[Ботужвеле (Отяжбуень)|Ботужвелесэ]]. Прядызеть сисемь классонь школанть тиринь велесэ, тусь важодеме «13 лет Октября» вейсхозов<ref name="МРОКМ им. И.Д. Воронина_Золотая нить ее жизни"/>. 
 
-[[1947 ие]]стэ сынь пурнасть 120 пудтт озимэнь [[розь]], эрьва 10 гектаронть эйстэ. [[1948 ие]]стэ, коли ульнесь коськечи, сонзэ марто важодицятне сайсть 7 центнерт [[мушко]]нь сэльге ды 12 центнерт видьме гектарстонть. Колхозось тень кисэ пурнась 75 тёж. [[целковой]]ть. 
+[[1947 ие]]стэ сынь пурнасть 120 пудтт озимэнь [[розь]], эрьва 10 гектаронть эйстэ. [[1948 ие]]стэ, коли ульнесь коськечи, сонзэ марто важодицятне сайсть 7 центнерт [[мушко]]нь сэльге ды 12 центнерт видьме гектарстонть. Колхозось тень кисэ пурнась 75 [[тёжа|тёж.]] [[целковой]]ть. 
 
-[[Медьков]]онь [[1949 ие]]стэ мушконь сюронь чачоманть кис сонензэ ульнесь максозь  Социалистической Важодемань Мараля лем. 
+[[Медьков]]онь [[1949 ие]]стэ мушконь сюронь чачоманть кис сонензэ ульнесь максозь  Социалистической Важодемань Мараля лем<ref name="МРОКМ им. И.Д. Воронина_Золотая нить ее жизни">[http://www.mrkm.ru/news/?id=89  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Золотая нить ее жизни] {{ref-ru}}</ref>. 
 Важодсь агрономокс «Валуево» санаторийсэ. Эри [[Московонь ёнкс]]со<ref>[http://adm-vidnoe.ru/index/0-18 Администрация Ленинского муниципального района Московской области]</ref>.
 
 
-== Сёрм. ==
+== Лисьм. ==
 <references />
 
 [[Category:Эрзят]]
