--- a/Тыргак_(Тумобуе).mw
+++ b/Тыргак_(Тумобуе).mw
@@ -40,7 +40,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 224<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               = 224<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -59,17 +59,25 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Тыргак''' ({{Lang-ru|Турдаково}}) — эрзянь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/f_Tyrdakovo.htm Многоликая Мордовия: Село Турдаково] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Тумобуе]]сэ.
+'''Тыргак<ref name="Память, запечатленная в слове"/>''' ({{Lang-ru|Турдаково}}) — эрзянь<ref name="РГО_с. Турдаково">[http://geo13.ru/reestr/object/207 Геопортал РГО в Республике Мордовия: с. Турдаково] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Тумобуе]]сэ.
 
-Ашти [[Водолейка]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Симбирской губернии}}) ([[1863 ие]]) ''Турдаки — 64<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Алатырень уездсэ''. 
+Ашти [[Водолейка]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> лангсо. 
+Кода ледстяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1863 ие]]) ''Турдаково – веле 49 кардазт-кудот марто Ордань уездсэ''.}}
+{{oq|ru|В «СНМ Симбирской губернии» (1863) – Турдаково - деревня удельная из 49 дворов Ардатовского уезда. }}
+{{Цитатань пе}}
 
 == Веленть лемденть  ==
-Лемесь–антропоним: кезерень эрзянь <'''Турдай ~ Турдей'''<ref name="Память, запечатленная в слове"/>>лемстэ.
+Лемесь–антропоним: кезерень эрзянь '''Турдай ~ Турдей'''<ref name="Память, запечатленная в слове"/>лемстэ.
+
+== Содавикс ломанть тестэнть ==
+Тыргак велесэ чачсь:
+* [[Бровцев Николай Михайлович|Николай Михайлович Бровцев]]<ref name="МРОКМ им. И.Д. Воронина_Н.М. Бровцев">[http://www.mrkm.ru/news/?id=82  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Н.М. Бровцев] {{ref-ru}}</ref> —  Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
 
 == Веленть эрямозо  ==
 Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]] велесэнть улить<ref name="Память, запечатленная в слове"/>: ''Ало ведьгев'', ''Ало киланго'', ''Ало килангонь пандо'', ''Андреев враг'', ''Андреев поляна'', ''Аржай лисьма'', ''Аржай пойма'', ''Батор пандо'', ''Беженань ки'', ''Брудпря'', ''Буин лисьма'', ''Буя поляна'', ''Буян лисьма'', ''Вармовка'', ''Василька пандо'', ''Васоло вирь'', ''Васькань лисьмапря'', ''Верьгиз латко'', ''Ветькелей латко'', ''Вишка сэрей коня'', ''Волна латкт'', ''Гайни лисьма'', ''Гала река '', ''Гаршин латко'', ''Горнипов луга'', ''Горчин латко'', ''Казна латко пакся'', ''Калдеркай'', ''Кандалейка'', ''Кев пандо'', ''Кече лисьма'', ''Крёст лисьма'', ''Крёст лисьма пакся'', ''Круталей'', ''Крутой бугор'', ''Крутой бугор луга'', ''Лётчик пандо'', ''Маня латко'', ''Мода сэдне'', ''Мокша латко'', ''Мохонь сад'', ''Олодя латко'', ''Очай Марянь ряд'', ''Печке лейня'', ''Пой пандо алкс ки'', ''Покш ки'', ''Роща'', ''Святой пандо'', ''Селей пандо'', ''Семиселенной'', ''Сёвонь латко'', ''Солаведь лисьма'', ''Солаведь луга'', ''Солаведь пакся'', ''Солаведь пандо'', ''Спорной'', ''Спорной латко'', ''Сэдьведь лисьма'', ''Сэрей коня'', ''Сэрей коня пандо'', ''Торной лей'', ''Тыргаконь печкема лей'', ''Удельной'', ''Цельник латко'', ''Цеця луга'', ''Чапамо'', ''Чапамо луга'', ''Чарыкаль'', ''Чарыньджей'', ''Чистёбань пандо'', ''Чищоба'', ''Шилов латко'', ''Шилов пандо''; '''курот''': ''Ватракшовка'', ''Игумен'', ''Сыбунча'', ''Третьяков''. 
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|Т]]
