*Empty MediaWiki Message*

--- a/Ицяло_(Ицял_буе).mw
+++ b/Ицяло_(Ицял_буе).mw
@@ -64,24 +64,22 @@
 Васенцеде веледенть сермадыть:
 «Эрямо таркань потмоксонть [[Алоошонь ёнкс|Алоошонь губерниянь]]» сермадовксонть (1863) Ицяло — казязь веле 331 кардаз марто Лугаянонь уездсэ. Пушечниковонь Д. ды Костяеевень А. '''«Сёрмадома ды онкст кирья пусмо»'''-сонть сермадови: {{Цитатань ушодома}}''[[1624 ие]]стэ вейсэнь чувтовиксэкс Баеньбуэнь веленть Инесар лейсэ ульнесть «эрзят Ицяло веленть мурза Отяев Михайло ялганзо марто ды  Алоошонь уезденть эрзят Ичалово велестэ Отяшев Баженко ялганзо марто»''.{{Цитатань пе}}  
 
-== Содавикс ломанть те велестэнть ==
+== Содавикс ломанть тестэнть ==
+* Г.Е. Вдовин, П.Д. Видманов, Н.Ф. Костюшов — налксицят (актёрт). 
+* Н.А. Винтин —  хирург. 
+* В.Д. Илюхин, Н.П. Рожков, В.П. Шадрин — артыцят. 
 * [[Йовлань Оло]] (Рамашкин В.И.) — Омбомасторонь содавикс морыця, [[«Торама» морамо-седямо кужо|«Торама» морамо-седямо кужонть]] пурныцясь.  
 * Н.И. Кулаков — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}).
 * [[Сурайкин, Николай Михайлович|Н.М. Сурайкин]] — генерал-лейтенант. 
 * [[Тихомиров, Александр Сергеевич|А. С. Тихомиров]] — тонавтнема кудонь прдыця, ({{Lang-ru|ректор Владивостокского медицинского института}}).
 *  Т.М. Тихонова  — келень содый. 
-* Н.А. Винтин —  хирург. 
+* [[Органов, Павел Александрович|Павел Александрович Органов]]<ref name="МРОКМ им. И.Д. Воронина_Органов Павел Александрович">[http://www.mrkm.ru/news/?id=71  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Органов Павел Александрович] {{ref-ru}}</ref> — морыця, тонавтыця
 * О.В. Паршин — спортцёра. 
-* Г.Е. Вдовин, П.Д. Видманов, Н.Ф. Костюшов — налксицят (актёрт). 
-* Л.П. Юшкова — тонавтыця. 
-* В.Д. Илюхин, Н.П. Рожков, В.П. Шадрин — артыцят. 
-* В.М. Юдина — сёрмадей. 
 * В.И. Чинченков — (строитель).
+* Л.П. Юшкова — тонавтыця. 
+* В.М. Юдина — сёрмадей. 
 
-
-
-
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 [[Category:Мордовиянь велеть|И]]
 [[Category:Ицял буень велеть|И]]
