*Empty MediaWiki Message*

--- a/Усть-Рахмановка_(Якстерекуро_буе).mw
+++ b/Усть-Рахмановка_(Якстерекуро_буе).mw
@@ -60,16 +60,17 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Усть-Рахмановка (смустьтне)}}
-'''Усть-Рахмановка''' ({{Lang-ru|с. Усть-Рахмановка}}) — [[печкаст|печкасонь]] веле<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/n_Yst-Rahmanovka.htm Многоликая Мордовия: Село Усть-Рахмановка] {{Ref-ru}}</ref> [[Якстерекуро буе]]сэ, [[Мордовия]]со.
+'''Усть-Рахмановка''', лиякс: '''Влиндор<ref name="МРОКМ им. И.Д. Воронина_Ахмет Симаев"/>''' ({{Lang-ru|с. Усть-Рахмановка}}) — [[печкаст|печкасонь]] веле<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/n_Yst-Rahmanovka.htm Многоликая Мордовия: Село Усть-Рахмановка] {{Ref-ru}}</ref> [[Якстерекуро буе]]сэ, [[Мордовия]]со.
 
 Ашти [[Рахманка лей]] лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) ''Усть-Рахмановка — 168<ref name="Многоликая"/> кудот марто Якстерекуронь уездсэ''.
 
 == Веленть лемденть  ==
 Лемесь саеви ({{Lang-ru|Усть < устье «место впадения одной реки в другую» >Усть-Рахмановка}} <ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> ды Рахманка леенть эйстэ.
 
-== Содавикс ломанть те велестэнть ==
+== Содавикс ломанть тестэнть ==
+* [[Симаев, Ахмет Садритдинович|Ахмет Садритдинович Симаев]]<ref name="МРОКМ им. И.Д. Воронина_Ахмет Симаев">[http://www.mrkm.ru/news/?id=50  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Ахмет Симаев] {{ref-ru}}</ref>—  содавиксэв валморозей
 == Веленть эрямозо  ==
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
