--- a/Кульмеж_(Инесаро_буе).mw
+++ b/Кульмеж_(Инесаро_буе).mw
@@ -60,7 +60,9 @@
 }}
 '''Кульмеж''' ({{Lang-ru|д. Кульмеж}})   — рузонь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/i_Kylmej.htm Многоликая Мордовия: Деревня Кульмеж] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Инесаро буе]]сэ.
 
-== Сёрм.: ==
+== Содавикс ломанть тестэнть ==
+* [[Антропов, Василий Яковлевич|Василий Яковлевич Антропов]]<ref name="МРОКМ им. И.Д. Воронина_Герой Днепра">[http://www.mrkm.ru/news/?id=49  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Василий Яковлевич Антропов] {{ref-ru}}</ref>—  Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
