*Empty MediaWiki Message*

--- a/Мокшалей_(Чаунзабуе).mw
+++ b/Мокшалей_(Чаунзабуе).mw
@@ -78,7 +78,7 @@
 Мокшалейсэ чачсть:
 * [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]]<ref>[http://izvmor.ru/article_10114.html Жизнь посвятил родному языку {{ref-ru}}]</ref>— тонавтыця, эрзянь ине кельсодый, профессор
 * Е.И. Чернов  — литературовед
-* Д.Т. Севастьянов — контр-адмирал
+* [[Севастьянов, Дмитрий Тимофеевич|Дмитрий Тимофеевич Севастьянов]]<ref name="МРОКМ им. И.Д. Воронина_ Севастьянов">[http://www.mrkm.ru/news/?id=8  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 90-летию контр-адмирала Д.Т. Севастьянова] {{ref-ru}}</ref> — контр-адмирал
 * Александр Сергеевич Катьков<ref>[http://refdb.ru/look/1330889-pall.html ВРЕМЯ И СОБЫТИЯ. 2010 {{ref-ru}}]</ref> — тонавтыця
 * Василий Девяткин<ref>[http://nekropole.info/ru/Vasilij-Devjatkin-1914 Некрополь. Василий Девяткин {{ref-ru}}]</ref> - (чачсь 1914 иестэ) ульнесь маштозь  58-10 ст. коряс  УК РСФСР.
 
@@ -86,7 +86,7 @@
 ==Ванмо==
 [http://www.cigankin.ru/archives/650  Цыганкин Д. В. на малой Родине]
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
