--- a/Ташто_Селища_(Покш_Игнадбуе).mw
+++ b/Ташто_Селища_(Покш_Игнадбуе).mw
@@ -60,6 +60,14 @@
 }}
 '''Ташто Селища''' ({{Lang-ru|''Старые Селищи''}}) - эрзянь веле [[Покш Игнадбуе]]сэ, [[Мордовия]]со.
 
+
+== Содавикс ломанть тестэнть ==
+* [[Борейкин, Петр Прохорович|Петр Прохорович Борейкин]]<ref name="МРОКМ им. И.Д. Воронина_Петр Прохорович Борейкин">[http://www.mrkm.ru/news/?id=1032  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Петр Прохорович Борейкин] {{ref-ru}}</ref>—  куляньсёрмадей, РСФСР-нь ды МАССР-нь шкинемань заслуженной важодиця, Ине Ойнань улиця. Эрзя.
+==Веленть эрямозо==
+
+== Лисьм.: ==
+<references />
+
 [[Category:Мордовиянь велеть]]
 [[Category:Покш Игнадбуень велеть]]
 [[Category:Эрзянь велеть]]
