--- a/Иваньбиё_(Лугаян_буе).mw
+++ b/Иваньбиё_(Лугаян_буе).mw
@@ -64,14 +64,12 @@
 Эрить  660 ломанть (2011 иестэ ловномась).
 ==Содавикс ломанть те велестэнть ==
 Иваньбиёсо чачсть:
+* [[Мокшин, Николай Фёлорович|Н.Ф. Мокшин]]<ref name="МРОКМ им. И.Д. Воронина_Мокшин">[http://www.mrkm.ru/news/?id=1017  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 80-летию со дня рождения Николая Федоровича Мокшина, этнографа, доктора исторических наук, профессора] {{ref-ru}}</ref> — профессор, келень-содый, сёрмадей
 * [[Надькин, Дмитрий Тимофеевич|Дмитрий Надькин]] — профессор, келень-содый
-
-
 
 Иваньбиёсо саезь [[1992 ие]]стэ теезь [[Иваньбиёнь краеведэнь музей|эрзянь культурань музей]]<ref>[http://uralistica.com/forum/topics/2161342:Topic:172264 URALISTICA Юбилей единственного в мире эрзянского музея]{{Ref-ru}}</ref>, пурныцязо-ванстыцязо Аношкин Н.И. 
 
-
-== Сёрм. ==
+== Лисьм. ==
 <references />
 
 [[Category:Алоошонь ёнксонь велеть|И]]
