*Empty MediaWiki Message*

--- a/Иваньбиё_(Лугаян_буе).mw
+++ b/Иваньбиё_(Лугаян_буе).mw
@@ -59,6 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
+{{Лия смустьтне|Иванцево (смустьтне)}}
 '''Иваньбиё''' ({{Lang-ru|с. Иванцево}}) - эрзянь веле [[Лугаян буе]]сэ [[Алоошонь ёнкс]]со.
 
 Эрить  660 ломанть (2011 иестэ ловномась).
