*Empty MediaWiki Message*

--- a/Петайкин,_Александр_Иванович.mw
+++ b/Петайкин,_Александр_Иванович.mw
@@ -22,9 +22,9 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Петайкинэнь Александр Иванович''' (псевдонимезэ ''' А. Крутогорский''', [[1936 ие]]нь [[таштамковонь 8 чи]]стэ - [[1999 ие]]нь [[сундерьковонь 3 чи]]стэ [[Саран ош]]) — [[Эрзя|эрзянь]] сёрмадей, прозаньсёрмадей, Россиянь Сёрмадеень вейсэндявксос совиця. 
+'''Петайкинэнь Александр Иванович''' (псевдонимезэ ''' А. Крутогорский<ref name="Петайкин"/>''', [[1936 ие]]нь [[таштамковонь 8 чи]]стэ - [[1999 ие]]нь [[сундерьковонь 3 чи]]стэ [[Саран ош]]) — [[Эрзя|эрзянь]] сёрмадей, прозаньсёрмадей, Россиянь Сёрмадеень вейсэндявксос совиця. 
 
-Чачсь [[Ицял буе]]нь [[Крутой Гора (Ицял буе)|Крутой Гора велесэ]]<ref name="Колхозонь прявтсто">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=0 Мордовская литература: Петайкин Александр Иванович]{{Ref-ru}}</ref> (лиясо сёрмадозь: [[Ицяло (Ицял буе)|Ицяло велесэ]]<ref>[http://lib.znate.ru/docs/index-231329.html?page=9 Петайкин Александр Иванович]{{Ref-ru}}</ref>).  1973 иестэ прядызе Литературань институтонть А.М. Горькень лемсэ.
+Чачсь [[Ицял буе]]нь [[Крутой Гора (Ицял буе)|Крутой Гора велесэ]]<ref name="Петайкин">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=0 Мордовская литература: Петайкин Александр Иванович]{{Ref-ru}}</ref> (лиясо сёрмадозь: [[Ицяло (Ицял буе)|Ицяло велесэ]]<ref>[http://lib.znate.ru/docs/index-231329.html?page=9 Петайкин Александр Иванович]{{Ref-ru}}</ref><ref name=" Календарь дат на 2011 год"> Календарь дат и событий на 2011 год / Нац. б-ка им. А. С. Пушкина Респ. Мордовия; сост. С. Х. Кильдеева. – Саранск, 2010. – 42 с. {{Ref-ru}}</ref>).  1973 иестэ прядызе Литературань институтонть А.М. Горькень лемсэ.
 
 Важодсь «По заветам Ленина» вейсхозсо (1954-1961 иетнестэ), Ицял буень «Путь Ильича» кулялопасонть сёрмадеекс (1961-1963 иетнестэ), «Знамя» ([[Чамзабуе]]нь) кулялопанть литважодицякс (1963-1965 иетнестэ), [[Покш Игнадбуе]]нь «Восход» кулялопанть пельксэнь ветицякс (1965-1967 иетнестэ), ульнесь «Эрзянь правда»  кулялопанть корреспондентэкс (1967-1975 иетнестэ), [[Оразайбуе]]нь «Заря коммунизма» кулялопанть пельксэнь ветицякс (1975-1979), [[Сятко (журнал-ковставкс)|«Сятко» ковкставксонь]] литважодицякс (1979-1984 иетнестэ), [[Лямбирьбуе]]нь «Призыв» кулялопанть пельксэнь ветицякс (1984-1987 иетнестэ) ды «Огни коммунизма» кулялопасонть (1987-1989 иетнестэ), «Пионерэнь вайгель» ковкставксонть покшредакторокс (1989-1991 иетнестэ), Мордовиянь Сёрмадеень вейсэндявксонть  литкевкстемань ёвтыцякс (литконсультатокс) (1991 ие), «Сельский строитель» кулялопанть корреспондентэкс (1992 ие), Кочкурбуеень «Заря» кулялопанть пельксэнь ветицякс (1994 ие).
 
@@ -42,6 +42,8 @@
 * Ломшин, М. Эйкакштнэнень эряви сёрмадомс седе чарькодевиксстэ: [А. И. Петайкинэнь творчествадо] // Эрзянь правда. – 2006. – 27 июля. – С. 11.
 * Петайкин Александр Иванович // Писатели Мордовии: биогр. справ. / сост.: Е. М. Голубчик, Т. С. Баргова. – Саранск, 2004. – С. 89-90.
 * Брыжинский, А. И. Писатели Мордовии: библиогр. указ. / А. И. Брыжинский, О. В. Пашутина, Е. И. Чернов, 2001. – С. 376-377. 
+
+== Лисьм.: ==
 <references />
 
 [[Category:Ломанть|П]]
