/* Содавикс ломанть тестэнть */

--- a/Ицяло_(Ицял_буе).mw
+++ b/Ицяло_(Ицял_буе).mw
@@ -77,7 +77,7 @@
 * О.В. Паршин — спортцёра. 
 * В.И. Чинченков — (строитель).
 * Л.П. Юшкова — тонавтыця. 
-* В.М. Юдина — сёрмадей. 
+* [[Юдина, Валентина Михайловна|Валентина Михайловна Юдина]]<ref name=" Календарь дат на 2011 год"> Календарь дат и событий на 2011 год / Нац. б-ка им. А. С. Пушкина Респ. Мордовия; сост. С. Х. Кильдеева. – Саранск, 2010. – 42 с. {{Ref-ru}}</ref> — эрзянь сёрмадей, куляньсёрмадей.
 
 == Лисьм.: ==
 <references />
