*Empty MediaWiki Message*

--- a/Эрзянь_Википедия.mw
+++ b/Эрзянь_Википедия.mw
@@ -1,8 +1,16 @@
+[[File:Wikipedia-logo-v2-myv.png|250px|thumb|Эрзянь Википедиянь логотипесь.]]
+
 '''Эрзянь Википедия''' —  Википедиянь пелькс [[эрзянь кель]]се.
 
-Ульнесь панжозь [[панжиковонь 26 чи]]сте  [[2008 ие]]сте.  Важодемась ушодовсь седе икеле, медьковонь 2007 иесте. Сесте  рузонь  Википедиянть пельксенть теицясь Андрей Суриков, американь кельсодыцясь Джак Рютер, инженер-программистэсь Михаил Степченко Ульяновск ошсто ды Ине-Петрань ошонь куляньсёрмадей Петрянь Андю ушодызь чапамонзо.
+Ульнесь панжозь [[панжиковонь 26 чи]]сте  [[2008 ие]]сте.  Важодемась ушодовсь седе икеле, медьковонь 2007 иесте. Сесте  рузонь  Википедиянть пельксенть теицясь Андрей Суриков, американь кельсодыцясь Джак Рютер, инженер-программистэсь Михаил Степченко<ref>[http://www.erzan.ru/news/erzjane-poluchajut-vikipediju-na-rodnom-jazyke Эрзяне получают Википедию на родном языке | Эрзянь ки. Культурно-образовательный портал]{{ref-ru}}</ref><ref>[http://www.encyclopedia.ru/news/enc/detail/38429/ Эрзянская Википедия успешно развивается]{{ref-ru}}</ref> Ульяновск ошсто ды Ине-Петрань ошсо эриця куляньсёрмадей Петрянь Андю ушодызь чапамонзо.
+
+[[2015 ие]]нь [[панжиковонь 16 чи]]стэ ульнесь сёрмадозь 2000<ref>[[m:Wikimedia_News#Wikipedias]] Читне ды тевтне Википедиясо {{ref-ru}}</ref>-це валрисьме. [[2016 ие]]нь [[медьковонь 4 чи]]стэ<ref name="Новости_на_эрзянском">[https://ru.wikinews.org/wiki/Категория:Новости_на_эрзянском_языке Новости на эрзянском языке]{{ref-ru}}</ref> ушодовсь сёрмадомат Викикулят<ref name="«Erzäks.ru»">[http://erzyaks.ru/myv/koda-yutas-v-erzyan-inekuzhos/ «Erzäks.ru» Кода ютась V Эрзянь Инекужось.]{{ref-myv}}</ref> эрзянь кельсэ.
+ 
 
 
+
+== Лисьм.: ==
+<references />
 
 {{stub}}
 
