([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Royal Hellenic Air Force Ensign.svg]] → [[File:Ensign of the Royal Hellenic Air Force.svg]]

--- a/ЛопаПарцун:Масторкоцт%2FГреция_Мастор.mw
+++ b/ЛопаПарцун:Масторкоцт%2FГреция_Мастор.mw
@@ -5,11 +5,11 @@
 | flag alias-1828 = Flag of Greece (1828-1978).svg
 | flag alias-1970 = Flag of Greece (1970-1975).svg
 | flag alias-ВМС = Hellenic Naval Ensign 1935.svg
-| flag alias-ВВС = Royal Hellenic Air Force Ensign.svg
+| flag alias-ВВС = Ensign of the Royal Hellenic Air Force.svg
 | flag alias-османская = Flag of Ottoman Greece.svg
 | flag alias-1833 = Kingdom of Greece Flag (1833-1862).svg
 | flag alias-ВМС-1935 = Hellenic Naval Ensign 1935.svg
-| flag alias-ВВС-1935 = Royal Hellenic Air Force Ensign.svg
+| flag alias-ВВС-1935 = Ensign of the Royal Hellenic Air Force.svg
 | flag alias-армия-1935 = Kingdom of Greece Flag.svg
 | variant = {{{variant|}}}
 <noinclude>
