*Empty MediaWiki Message*

--- a/Карсаевка_(Белинской_буе).mw
+++ b/Карсаевка_(Белинской_буе).mw
@@ -5,15 +5,15 @@
  |оригинальное название   = {{Lang-ru|Корсаевка}}
  |изображение             = 
  |подчинение              = 
- |мастор                  = Россия Мастор
+ |мастор                  = Россия
  |герб                    = 
  |коцт                    = 
  |описание герба          = 
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 52.991597|lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = 43.221398|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
