*Empty MediaWiki Message*

--- a/Мокшень_Масканя_(Кузбуе).mw
+++ b/Мокшень_Масканя_(Кузбуе).mw
@@ -72,9 +72,9 @@
 
 
 == Содавикс ломанть те велестэнть ==
-* Кудашкин Андрей Матвеевич<ref name="ОФ_Адм">[http://maskin.elnikirm.ru ОФИЦИАЛЬНЫЙ САЙТ АДМИНИСТРАЦИИ МОРДОВСКО-МАСКИНСКОГО СЕЛЬСКОГО ПОСЕЛЕНИЯ] {{Ref-ru}}</ref> — содавикс валморозей
+* Кудашкин Андрей Матвеевич<ref name="ОФ_Адм">[http://maskin.elnikirm.ru ОФИЦИАЛЬНЫЙ САЙТ АДМИНИСТРАЦИИ МОРДОВСКО-МАСКИНСКОГО СЕЛЬСКОГО ПОСЕЛЕНИЯ] {{Ref-ru}}</ref><ref name="Национальная библиотека">[http://www.library.saransk.ru/actions/index.php?ELEMENT_ID=1260 «Национальная библиотека им. А.С. Пушкина Республики Мордовия» «Мокшэрзянь крайть мазы вайгяль цёфксоц»: к 80-летию И. Н. Кудашкина] {{ref-ru}}</ref> — содавикс валморозей
 == Веленть эрямозо  ==
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
