/* Пенза ёнксонь буетне */ Белинской - сёрмадицянь кудораськень лем

--- a/Пенза_ёнкс.mw
+++ b/Пенза_ёнкс.mw
@@ -32,7 +32,7 @@ MSKS=0|
 
 * [[Башмаконь буе (Пенза ёнкс)|Башмаконь буе]] ({{lang-ru|Башмаковский район}})		
 * [[Бековонь буе (Пенза ёнкс)|Бековонь буе]] ({{lang-ru|Бековский район}})		
-* [[Белинань буе (Пенза ёнкс)|Белинань буе]] ({{lang-ru|Белинский район}})		
+* [[Белинской буе (Пенза ёнкс)|Белинской буе]] ({{lang-ru|Белинский район}})		
 * [[Бессоновонь буе (Пенза ёнкс)| Бессоновонь буе]] ({{lang-ru|Бессоновский район}})		
 * [[Вадинэнь буе (Пенза ёнкс)|Вадинэнь буе]] ({{lang-ru|Вадинский район}})		
 * [[Городищань буе (Пенза ёнкс)|Городищань буе]] ({{lang-ru|Городищенский район}})		
