--- a/Карсаевка_(Белинской_буе).mw
+++ b/Карсаевка_(Белинской_буе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Карсаевка'''  ({{Lang-ru|Корсаевка}}) — мокшонь<ref name="Древности Пензенского края">Полубояров М.С. Древности Пензенского края в зеркале топонимики: М. Издательство «ФОН», 2010 – 224 с.  стр.145  ISBN 5-89022-094-2 {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref><ref name="МРОКМ им. И.Д. Воронина_Т.Ф. Якушкин"/> веле [[Пенза ёнкс|Пенза ёнкссонть]] [[Белинской буе (Пенза ёнкс)]]сэ.
+'''Карсаевка'''  ({{Lang-ru|Корсаевка}}) — мокшонь<ref name="Древности Пензенского края">Полубояров М.С. Древности Пензенского края в зеркале топонимики: М. Издательство «ФОН», 2010 – 224 с.  стр.145  ISBN 5-89022-094-2 {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref><ref name="МРОКМ им. И.Д. Воронина_Т.Ф. Якушкин"/> веле [[Пенза ёнкс|Пенза ёнкссонть]] [[Белинской буе (Пенза ёнкс)|Белинской буе]]сэ.
 
 
 == Веленть лемденть  ==
