*Empty MediaWiki Message*

--- a/Карсаевка_(Белинской_буе).mw
+++ b/Карсаевка_(Белинской_буе).mw
@@ -47,14 +47,14 @@
   |национальный состав    = [[мокшот]]
   |конфессиональный состав= 
   |этнохороним            = 
- |часовой пояс            = 
+ |часовой пояс            = +3
  |DST                     = 
  |телефонный код          = 
- |почтовый индекс         = 
+ |почтовый индекс         = 442261
  |почтовые индексы        = 
  |автомобильный код       = 58
  |вид идентификатора      = ОКАТО 
- |цифровой идентификатор  = {{ОКАТО|}}
+ |цифровой идентификатор  = {{ОКАТО|56212812009}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
