more actual map of Luxembourg - with 12 cantons instead 3 abondished districts

--- a/ЛопаПарцун:ПозКарта_Люксембург_Мастор.mw
+++ b/ЛопаПарцун:ПозКарта_Люксембург_Мастор.mw
@@ -6,7 +6,7 @@
 |right  = 6.6
 |image={{#switch: {{{2|}}}
 |physical=Luxembourg relief location map.jpg
-|#default=Luxembourg location map.svg
+|#default=Luxembourg location map - cantons.svg
 }}
 |areas = {{#switch:{{{2|}}}
  |physical = {{ЛопаПарцун:ПозКарта Люксембург Мастор/adm}}
