*Empty MediaWiki Message*

--- a/Ташто_Орданьбие_(Орданьбуе).mw
+++ b/Ташто_Орданьбие_(Орданьбуе).mw
@@ -71,13 +71,14 @@
 == Веленть эрямозо  ==
 
 ==Содавикс ломанть те велестэнть==
-* В. Н. Кудашкин —дипломат
-*  А. Н. Кузанкин — эрьва-мезень теиця,
 * М. Г. Апанина — тонавтыця, казязь медалью «За трудовую доблесть» медельсэ 
 * И. Я. Колганов — филологиянь наукань кандидат
+* В. Н. Кудашкин —дипломат
+*  А. Н. Кузанкин — эрьва-мезень теиця,
+* Сафонова Татьяна Фёдоровна<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=5621&nom11=481 «Эрзянь Мастор», 481-це №, 15.09.2016 ТАШТАМКОВОНЬ 17-ЦЕ ЧИСТЭ САФОНОВА (ТЕЛИНА) ТАТЬЯНА ФЕДОРОВНАНЕНЬ - 80!] {{Ref-myv}}, {{Ref-ru}}</ref> — библиограф
 
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|Т]]
