--- a/Отяжбуе.mw
+++ b/Отяжбуе.mw
@@ -78,6 +78,7 @@
 * [[Дюрькина (Отяжбуе)|Дюрькина]] ({{lang-ru|с. Дюрки}})
 * [[Капазвеле (Отяжбуе)|Капазвеле]] (кортамокельсэ: Капазэле) ({{lang-ru|с. Капасово}})
 * [[Козловка (Отяжбуе)|Козловка]] (лиякс: Кузлома, {{lang-ru|с. Козловка}}) - эрз., село в Атяш
+* [[Кулязбуе (Отяжбуе)|Кулязбуе]] ( {{lang-ru|с. Кулясово}}) 
 * [[Ламбаське (Отяжбуе)|Ламбаське]] ({{lang-ru|с. Лобаски}})
 * [[Лига (Отяжбуе)|Лига]] ({{lang-ru|п. Лига}})  
 * [[Пилезеле (Отяжбуе)|Пилезеле]] ({{lang-ru|с. Пилесево}})   
