--- a/Кулязбуе_(Отяжбуе).mw
+++ b/Кулязбуе_(Отяжбуе).mw
@@ -40,7 +40,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 566
+  |эрицятне               = 
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
