бывшая снимка была о чужое виде

--- a/Митя_панго.mw
+++ b/Митя_панго.mw
@@ -1,7 +1,7 @@
 {{Таксономиясь
 |name = ''Митя панго''
 |latin = ''Russula foetens''
-|image file =  Russula.foetens.-.lindsey.jpg
+|image file =  Russula foetens.JPG
 |image descr = Митя панго 
 |superregnum = Пангт
 |subregnum = 
