*Empty MediaWiki Message*

--- a/Сильвестр_II.mw
+++ b/Сильвестр_II.mw
@@ -5,7 +5,7 @@
  |артовкс              = Silvester II.JPG <!-- Брать только с commons или из ру-wiki, ссылки на другие сервера игнорируются -->
  |артовксонть покшолмазо   = 
  |артовксонть эйсте    = <!-- Должно характеризовать портрет -->
- |важодема ёрокчизе    = римонь попось
+ |важодема ёрокчизе    = римень инепопось
  |чачома чись          = [[943 ие]] ваксо
  |чачома тарка         = {{ЧачомаТарка|Орийяк}}
  |гражданство            = 
