--- a/Кулязбуе_(Отяжбуе).mw
+++ b/Кулязбуе_(Отяжбуе).mw
@@ -12,8 +12,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 54.56363|lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = 46.066838|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
@@ -50,11 +50,11 @@
  |часовой пояс            = +3
  |DST                     = 
  |телефонный код          = 
- |почтовый индекс         = 
+ |почтовый индекс         = 431800
  |почтовые индексы        = 
  |автомобильный код       = 13
- |вид идентификатора      = 
- |цифровой идентификатор  = 
+ |вид идентификатора      = ОКАТО
+ |цифровой идентификатор  = {ОКАТО|89207551000}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
