--- a/Рябовонь,_Анатолий_Павлович.mw
+++ b/Рябовонь,_Анатолий_Павлович.mw
@@ -66,7 +66,7 @@
 == НКВД: «Эрзя ды мокшонь раськетнень ятт» ==
 «Вельть покш важодемась» мокшо ды эрзянь культуранть кепедемасонть НКВД-нтень неявсь берянь тевкс. 1937-це иень [[Аштемков|аштемковонь]] 5-це чистэ ульнесь максозь №4  ордер Рябовонь Анатолиень кудосо вешнеманть коряс. Сонзэ пекстызь, ёвтазь «мокшонь ды эрзянь ятокс». Пекстазель сонзэ низэяк, тонавтыцясь Прасковья Фадеевна, а цёраст Ричард ёртозель ушов.
 
-1937-це иень [[Ацамков|ацамковонь]] 17-це чистэнть чумондомасонть мерезель, што сонзэ сиведизь финнэнь ды эстононь шпионтнэ, [[Бубрих, Дмитрий Владимирович|Дмитрий Бубрих]] ды Марк. Нама, А. Рябов кодамояк «антисоветской» тевсэ арасель, ялатеке 1938-це иень [[Панжиков|панжиковонь]] 23-це чистэ ледезель. Калмамо тарказо апак ёвта те шкамс.
+1937-це иень [[Ацамков|ацамковонь]] 17-це чистэнть чумондомасонть мерезель, што сонзэ сиведизь финнэнь ды эстононь шпионтнэ, [[Бубрих, Дмитрий Владимирович|Дмитрий Бубрих]] ды Марк. Нама, А. Рябов кодамояк «антисоветской» тевсэ арасель, ялатеке 1938-це иень [[Панжиков|панжиковонь]] 23-це чистэ ледезель. Калмамо тарказо апак ёвта те шкас.
 
 Омбоцеде чавизь сонзэ кода «раськень ят» 1952-це иень келень конференциясо, кона алтазель келень коряс «Сталинэнь» роботатненень, истя жо ледезельть Мордовиянь ламо лия покш ломанть. СССР-нь Верховной Судонь Военной коллегиясь 1956-це иень [[Сундерьков|сундерьковонь]] 28-це чистэ полавтызе Верховной Судонь коллегиянь приговоронзо, кона теезель А. П. Рябовонь коряс, секскак тевесь лоткавтозель преступлениянть арасьчинзэ коряс.
 
