/* Содавикс ломанть те велестэнть */

--- a/Кеченьбуе_(Орданьбуе).mw
+++ b/Кеченьбуе_(Орданьбуе).mw
@@ -68,7 +68,7 @@
 
 ==Содавикс ломанть те велестэнть==
 * [[Тремасов, Николай Фёдорович|Н. Ф. Тремасов]]<ref name="МРОКМ им. И.Д. Воронина_Как на поле боя">[http://www.mrkm.ru/news/?id=430  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Как на поле боя: к 90-летию со дня рождения Героя Социалистического Труда Николая Федоровича Тремасова] {{ref-ru}}</ref> — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
-* [[Миронов, Тихон Петрович|Т.П. Миронов]] — келень-содый
+* [[Миронов, Тихон Петрович|Тихон Петрович Миронов]]<ref name="Академик: МИРОНОВ">[http://vostokoved.academic.ru/416/МИРОНОВ,_Тихон_Петрович Академик: МИРОНОВ Тихон Петрович]{{Ref-ru}}</ref> — эрзянь келень-содый
 
 == Сёрм.: ==
 <references />
